<resources>
    <string name="app_name">Z-VentApp</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Este es un id de prueba para la publicidad -->
    <string name="id_admob_intersticial">ca-app-pub-3940256099942544/1033173712</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="email">Email</string>
    <string name="clave">Clave</string>
    <string name="acceder">Acceder</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buscar">Buscar</string>
    <string name="nombre">Nombre</string>
    <string name="vigente">Vigente</string>
    <string name="menu_usuario">Usuario</string>
    <string name="editar_usuario">Editar Usuario</string>
    <string name="nuevo_usuario">Nuevo Usuario</string>
    <string name="titulo">TITULO</string>
    <string name="dato">Dato</string>
    <string name="estado">Estado</string>
    <string name="nrodoc">Nro. Documento</string>
    <string name="no_vigente">No Vigente</string>
    <string name="menu_cliente">Cliente</string>
    <string name="editar_cliente">Editar Cliente</string>
    <string name="nuevo_cliente">Nuevo Cliente</string>
    <string name="codigo_barra">Codigo de Barra</string>
    <string name="descripcion">Descripcion</string>
    <string name="precio">Precio</string>
    <string name="menu_producto">Producto</string>
    <string name="editar_producto">Editar Producto</string>
    <string name="nuevo_producto">Nuevo Producto</string>
    <string name="importe">Importe:</string>
    <string name="valor_cero">0.00</string>
    <string name="cliente">Cliente</string>
    <string name="mensaje_home">Para insertar productos a su ticket presione el botón ( + ) Agregar.</string>
    <string name="buscar_cliente">Buscar Cliente.</string>
    <string name="opciones">Opciones</string>
    <string name="agregar_producto">AGREGAR PRODUCTO</string>
    <string name="confirmar_ticket">CONFIRMAR TICKET</string>
    <string name="catalogo_producto">Catalogo de Productos</string>
    <string name="cantidad_uno">1</string>
    <string name="cantidad">Cantidad</string>
    <string name="reportes">Reportes</string>
    <string name="menu_reporte_ticket">Reporte de Ticket</string>
    <string name="menu_reporte_mensual">Reporte Mensual</string>
    <string name="menu_reporte_caja">Reporte de Caja</string>
    <string name="app">App</string>
    <string name="menu_empresa">Empresa</string>
    <string name="menu_impresora">Impresora</string>
    <string name="menu_cambiar_calve">Cambiar Clave</string>
    <string name="menu_acerca_de">Acerca De</string>
    <string name="version_app">v1.0.0</string>
    <string name="descripcion_app">Descubre nuestra avanzada aplicación de Punto de Venta, desarrollada en Kotlin y basada en el patrón MVVM con Clean Architecture, diseñada para ofrecerte una experiencia de gestión integral. Con esta aplicación, tendrás el control total sobre tus productos, clientes, usuarios del sistema, y ventas a través de tickets detallados.\n\nLa aplicación no solo facilita la creación y gestión de ventas, sino que también te permite generar reportes gráficos intuitivos y precisos, imprimir tickets directamente desde la app, y compartir reportes de manera fácil y rápida a través de correo electrónico, WhatsApp u otras plataformas. Además, podrás exportar toda la información relevante en formato Excel, ideal para llevar un registro detallado y realizar análisis avanzados.\n\nMaximiza la eficiencia de tu negocio y mantén todo bajo control con nuestra solución de Punto de Venta, diseñada para adaptarse a las necesidades de cualquier tipo de comercio.</string>
    <string name="clave_actual">Clave Actual</string>
    <string name="nueva_clave">Nueva Clave</string>
    <string name="razon_social">Razon Social</string>
    <string name="ruc">Ruc</string>
    <string name="direccion">Direccion</string>
    <string name="telefono">Telefono</string>
    <string name="quick_printer">Quick Printer</string>
    <string name="raw_bt">Raw BT</string>
    <string name="alias_impresora">Alias de Impresora</string>
    <string name="mensaje_impresora">NOTA: Los alias de las impresoras deben de ir separados por coma (,) ejemplo: Alias1, Alias2, Alias3, etc. Esto es obligatorio para el tipo Quick printer.\n\nPara la impresora Raw BT esto no aplica, por lo tanto este campo alias puede estar vacío.</string>
    <string name="desde">Desde:</string>
    <string name="hasta">Hasta:</string>
    <string name="fecha_simulada">2025-26-01 15:00:00</string>
    <string name="total">Total.</string>
    <string name="detalle_ticket">Detalle del Ticket</string>
    <string name="detalles">Detalles:</string>
    <string name="anio">Seleccione el Año</string>
</resources>