<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_shopping_cart_24"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_cliente"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/menu_cliente" />
        <item
            android:id="@+id/nav_producto"
            android:icon="@drawable/ic_package_for_delivery"
            android:title="@string/menu_producto" />
    </group>

    <item android:title="@string/reportes">
        <menu>
            <item
                android:id="@+id/nav_reporte_ticket"
                android:icon="@drawable/baseline_receipt_24"
                android:title="@string/menu_reporte_ticket"/>

            <item
                android:id="@+id/nav_reporte_mensual"
                android:icon="@drawable/baseline_bar_chart_24"
                android:title="@string/menu_reporte_mensual"/>

            <item
                android:id="@+id/nav_reporte_caja"
                android:icon="@drawable/baseline_money_24"
                android:title="@string/menu_reporte_caja"/>
        </menu>

    </item>

    <item android:title="@string/app">
        <menu>
            <item
                android:id="@+id/nav_empresa"
                android:icon="@drawable/baseline_domain_24"
                android:title="@string/menu_empresa"/>

            <item
                android:id="@+id/nav_impresora"
                android:icon="@drawable/baseline_print_24"
                android:title="@string/menu_impresora"/>

            <item
                android:id="@+id/nav_usuario"
                android:icon="@drawable/baseline_badge_24"
                android:title="@string/menu_usuario" />

            <item
                android:id="@+id/nav_cambiar_clave"
                android:icon="@drawable/baseline_key_24"
                android:title="@string/menu_cambiar_calve"/>

            <item
                android:id="@+id/nav_acerca_de"
                android:icon="@drawable/baseline_info_24"
                android:title="@string/menu_acerca_de"/>
        </menu>

    </item>
</menu>